@@ -1,0 +1,2 @@
+Both subprocess connection error messages now refer to the 'Startup failure'
+section of the IDLE doc.
